# Flexobot-Robotic-Arm

./: README.md
flexobot_controllers/: CMakeLists.txt  package.xml
flexobot_controllers/config/: flexobot_controllers.yaml  joy_teleop.yaml
flexobot_controllers/launch/: controllers.launch.py  joystick.launch.py
flexobot_description/: CMakeLists.txt  package.xml
flexobot_description/launch/: display.launch.py  gazebo.launch.py
flexobot_description/meshes/: end_eff.STL  left_claw.STL  link_1.STL  link_3.STL  link_5.STL  link_6.STL  right_claw.STL  world.STL
flexobot_description/rviz/: display.rviz
flexobot_description/urdf/: flexobot.urdf  flexobot_gazebo.xacro  flexobot_ros2_control.xacro
flexobot_executions/: CMakeLists.txt  package.xml
flexobot_executions/src/: joint_control.cpp  joystick_control.cpp
flexobot_moveit/: CMakeLists.txt  package.xml
flexobot_moveit/config/: chomp_planning.yaml  flexobot.srdf  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml
flexobot_moveit/launch/: moveit.launch.py
